// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RunningTasksCard render with minimal props 1`] = `
<TasksDonutCard
  className=""
  data={
    Object {
      "last": 0,
      "older": 0,
    }
  }
  query={Object {}}
  time="H24"
  title="Running"
  updateQuery={[Function]}
  wantedQueryState="running"
/>
`;

exports[`RunningTasksCard render with some props 1`] = `
<TasksDonutCard
  className=""
  data={
    Object {
      "last": 0,
      "older": 0,
    }
  }
  query={Object {}}
  some="prop"
  time="H24"
  title="Running"
  updateQuery={[Function]}
  wantedQueryState="running"
/>
`;
